// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-dnqmqq byRqIQ k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-dnqmqq byRqIQ k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer custom-class k-Carousel__inner__pageContainer--isActivePage"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> empty carousel matches with snapshot 1`] = `null`;

exports[`<Carousel /> legacy carousel on desktop matches with snapshot 1`] = `
<div
  className="sc-htoDjs iGhxnQ k-Carousel k-LegacyCarousel k-LegacyCarousel--inGrid"
>
  <div
    className="k-Grid"
  >
    <div
      className="k-Grid__col--10 k-Grid__col--offset-1"
    >
      <div
        className="sc-EHOje hDKIby k-Carousel__inner"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage"
          onClick={[Function]}
        >
          <div
            className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
          >
            <div
              className="sc-ifAKCX hopHbK k-Carousel__page__item"
            >
              <div
                className="k-ProjectCard k-Card k-Card--light"
                href={null}
                title={null}
              >
                <div
                  className="k-ProjectCard__grid"
                >
                  <div
                    className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
                  >
                    <span
                      className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                      tabIndex={null}
                    >
                      <img
                        alt=""
                        className="k-ButtonImage__img"
                        src={null}
                      />
                    </span>
                    <p
                      className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                    >
                      <span
                        className="k-u-weight-regular"
                      >
                        Name
                      </span>
                    </p>
                  </div>
                  <div
                    className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
                  >
                    <p
                      className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                    >
                      A
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ifAKCX kXmzYc k-Carousel__page__item"
            />
            <div
              className="sc-ifAKCX kXmzYc k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col--1"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on desktop with withoutLeftOffset={true} matches with snapshot 1`] = `
<div
  className="sc-htoDjs iGhxnQ k-Carousel k-LegacyCarousel k-LegacyCarousel--inGrid"
>
  <div
    className="k-Grid"
  >
    <div
      className="k-Grid__col--11 k-Grid__col--offset-0"
    >
      <div
        className="sc-EHOje hDKIby k-Carousel__inner"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage"
          onClick={[Function]}
        >
          <div
            className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
          >
            <div
              className="sc-ifAKCX hopHbK k-Carousel__page__item"
            >
              <div
                className="k-ProjectCard k-Card k-Card--light"
                href={null}
                title={null}
              >
                <div
                  className="k-ProjectCard__grid"
                >
                  <div
                    className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
                  >
                    <span
                      className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                      tabIndex={null}
                    >
                      <img
                        alt=""
                        className="k-ButtonImage__img"
                        src={null}
                      />
                    </span>
                    <p
                      className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                    >
                      <span
                        className="k-u-weight-regular"
                      >
                        Name
                      </span>
                    </p>
                  </div>
                  <div
                    className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
                  >
                    <p
                      className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                    >
                      A
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ifAKCX kXmzYc k-Carousel__page__item"
            />
            <div
              className="sc-ifAKCX kXmzYc k-Carousel__page__item"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-Grid__col--1"
    />
  </div>
</div>
`;

exports[`<Carousel /> legacy carousel on mobile matches with snapshot 1`] = `
<div
  className="sc-htoDjs iGhxnQ k-Carousel k-LegacyCarousel k-LegacyCarousel--noGrid"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-dnqmqq byRqIQ k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer k-Carousel__inner__pageContainer--isActivePage"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page k-Carousel__page--isActivePage"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-kAzzGY ezeBhR k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-kAzzGY joJvuh k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-chPdSV cYYEzz k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;
